tests/baselines/reference/importMeta(module=system,target=esnext).errors.txt
error TS2468: Cannot find global value 'Promise'.
assignmentTargets.ts(1,44): error TS2339: Property 'blah' does not exist on type 'ImportMeta'.
assignmentTargets.ts(1,63): error TS2339: Property 'blue' does not exist on type 'ImportMeta'.
assignmentTargets.ts(2,1): error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
example.ts(2,2): error TS2705: An async function or method in ES5 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
example.ts(6,28): error TS2339: Property 'scriptElement' does not exist on type 'ImportMeta'.
moduleLookingFile01.ts(2,23): error TS17012: 'metal' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
moduleLookingFile01.ts(3,23): error TS17012: 'import' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
scriptLookingFile01.ts(2,22): error TS17012: 'metal' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
scriptLookingFile01.ts(3,22): error TS17012: 'import' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?


!!! error TS2468: Cannot find global value 'Promise'.
==== example.ts (2 errors) ====
    // Adapted from https://github.com/tc39/proposal-import-meta/tree/c3902a9ffe2e69a7ac42c19d7ea74cbdcea9b7fb#example
    (async () => {
     ~~~~~~~~~~~~~
!!! error TS2705: An async function or method in ES5 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
      const response = await fetch(new URL("../hamsters.jpg", import.meta.url).toString());
      const blob = await response.blob();
    
      const size = import.meta.scriptElement.dataset.size || 300;
                               ~~~~~~~~~~~~~
!!! error TS2339: Property 'scriptElement' does not exist on type 'ImportMeta'.
    
      const image = new Image();
      image.src = URL.createObjectURL(blob);
      image.width = image.height = size;
    
      document.body.appendChild(image);
    })();
    
==== moduleLookingFile01.ts (2 errors) ====
    export let x = import.meta;
    export let y = import.metal;
                          ~~~~~
!!! error TS17012: 'metal' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    export let z = import.import.import.malkovich;
                          ~~~~~~
!!! error TS17012: 'import' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    
==== scriptLookingFile01.ts (2 errors) ====
    let globalA = import.meta;
    let globalB = import.metal;
                         ~~~~~
!!! error TS17012: 'metal' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    let globalC = import.import.import.malkovich;
                         ~~~~~~
!!! error TS17012: 'import' is not a valid meta-property for keyword 'import'. Did you mean 'meta'?
    
==== assignmentTargets.ts (3 errors) ====
    export const foo: ImportMeta = import.meta.blah = import.meta.blue = import.meta;
                                               ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'ImportMeta'.
                                                                  ~~~~
!!! error TS2339: Property 'blue' does not exist on type 'ImportMeta'.
    import.meta = foo;
    ~~~~~~~~~~~
!!! error TS2364: The left-hand side of an assignment expression must be a variable or a property access.
    
    // @Filename augmentations.ts
    declare global {
      interface ImportMeta {
        wellKnownProperty: { a: number, b: string, c: boolean };
      }
    }
    
    const { a, b, c } = import.meta.wellKnownProperty;